--- a/.dockerignore
+++ b/.dockerignore
@@ -1,21 +1,14 @@
-# Исключения для Docker
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
-.venv/
-venv/
+.Python
 env/
+venv/
+build/
+dist/
+*.egg-info/
+.DS_Store
 .idea/
 .vscode/
-*.log
-*.pid
-*.tmp
-*.bak
-*.swp
 media/
-*.db
-config.py
-.DS_Store
-Thumbs.db
-
